Make code quality fixes

--- a/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Close.cshtml
@@ -1,4 +1,4 @@
-@page "{id:Guid?}"
+﻿@page "{id:Guid?}"
 @using MyApp.WebApp.Pages.Shared.EditorTemplates
 @using MyApp.WebApp.Platform.Rendering
 @model CloseModel
@@ -11,15 +11,15 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="p-3 bg-light-subtle border rounded-3">
-    <h4>Status</h4>
+    <h2 class="h4">Status</h2>
     <p>@Model.ItemView.Status</p>
-    <h4>Entry Type</h4>
+    <h2 class="h4">Entry Type</h2>
     <p>@Model.ItemView.EntryTypeName</p>
-    <h4>Date Received</h1>
+    <h2 class="h4">Date Received</h2>
     <p>@Model.ItemView.ReceivedDate</p>
-    <h4>Notes</h1>
+    <h2 class="h4">Notes</h2>
     <section class="border border-info p-4 rounded mb-3">
-        @Html.Raw(MarkdownHelper.MarkdownToHtml(Model.ItemView.Notes ?? ""))
+        @Html.Raw(MarkdownHelper.MarkdownToHtml(Model.ItemView.Notes))
     </section>
     <form method="post">
         <div class="mb-3">
@@ -32,7 +32,3 @@
         <input asp-for="EntryDto.WorkEntryId" type="hidden" />
     </form>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
