Add a Markdown text editor (#114)
* Added Link and script for SimpleMDE

* Created SimpleMDE.js file. Got rich text editor to appear using custom <textarea>

* updated js. should effect all textarea elements on page

* added .js code to all(?) pages with textarea. changed icon color

* removed fullscreen option, added markdig package

* Markdown.cs to take markdown string and convert to html. RTE Functionaly and now displays Markdown correctly

* Fix bug in Work Entry edit page

* commit

* Uninstalled Markdig everywhere except "WebApp"

* Re-installed Markdig for AppServices

* SimpleMDE files -> EasyMDE. Attempted using @sections opposed to <head> tags for the scripts and stylesheet. Non functional as of now

* Added textarea-to-MDE.js

* EasyMDE works on textareas. Removed all instances of "SimpleMDE." Working on styling with dark mode and options for EasyMDE

* Changes to toolbar

* css changes for Dark Mode EasyMDE

* removed overlapping label for textarea

* Created new additionalViewData for EasyMDE. Added MDE to Edit.cshtml

* Added the HtmlSanitizer package to AppServices. Sanitized rendered Markdown on the backend.

* Added .UseBootstrap() to MarkdownPiplineBuilder(),
Moved Markdown.cs to WebApp from AppServices,
Uninstalled HtmlSanitizer from AppServices and reinstalled in WebApp

* Used libman for DOMPurify

* Installed EasyMDE via libman

* Fixed references in Details.cshtml. Deleted EasyMDE.css and incorporated changes into libman file

* Added easymde.darkmode.css to overwrite some css in easymde

* added DOMpurify to textarea-to-MDE. added correct styles to Details.cshtml

* Removed EasyMDE from Details and added to Edit

* Changed Notes section in Details.cshtml. Border now surrounds generated Markdown HTML

* Several CSS changes: Fullscreen background, fullscreen taskbar, cursor color, etc.

* Removed Preview

* Removed unnecessary EasyMDE references in Close.cshtml. Removed Label for Textar

--- a/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
@@ -17,11 +17,12 @@
         </div>
 
         <h2>Details</h2>
+
         <div class="row">
             <div class="col-md">
                 <div class="mb-3">
                     @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea,
-                        additionalViewData: new { Rows = 5 })
+                        additionalViewData: new { Rows = 5, MDE = true })
                 </div>
             </div>
             <div class="col-md">
@@ -29,6 +30,7 @@
                     @Html.EditorFor(model => model.Item.EntryTypeId, EditorTemplate.Select,
                         additionalViewData: new { Items = Model.EntryTypesSelectList, Placeholder = string.Empty })
                 </div>
+                
             </div>
         </div>
 
@@ -42,4 +44,10 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/lib/easymde/dist/easymde.min.js"></script>
+    <script src="~/js/textarea-to-MDE.js" defer></script>
+}
+@section Styles {
+    <link rel="stylesheet" href="~/lib/easymde/dist/easymde.min.css" />
+    <link rel="stylesheet" href="~/css/easymde.darkmode.css"/>
 }
