--- a/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
+++ b/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
@@ -107,9 +107,9 @@
                             <svg class="bi me-1 theme-icon-active">
                                 <use href="@iconsFile#app-icon-circle-half"></use>
                             </svg>
-                            <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+                            <span class="ms-2 visually-hidden" id="bd-theme-text">Toggle theme</span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text">
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme">
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="light">
                                     <svg class="bi me-2 opacity-50">
