--- a/src/WebApp/Pages/Admin/Maintenance/EntryTypes/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/EntryTypes/Index.cshtml
@@ -7,7 +7,12 @@
 }
 
 <p class="d-print-none">
-    <a asp-page="../Index" class="lead link-offset-2">← Site Maintenance</a>
+    <a asp-page="../Index" class="lead icon-link">
+        <svg class="bi">
+            <use href="@Url.Content("~/images/app-icons.svg")#app-icon-arrow-90deg-up"></use>
+        </svg>
+        Site Maintenance
+    </a>
 </p>
 
 <h1>@IndexModel.ThisOption.PluralName</h1>
