--- a/src/WebApp/Pages/Staff/WorkEntries/Index.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Index.cshtml
@@ -30,7 +30,7 @@
                     {
                         <div class="col-md mb-3">
                             <div class="form-floating">
-                                <select asp-for="Spec.DeletedStatus" name="@nameof(Model.Spec.DeletedStatus)" 
+                                <select asp-for="Spec.DeletedStatus" name="@nameof(Model.Spec.DeletedStatus)"
                                         asp-items="Html.GetEnumSelectList<SearchDeleteStatus>()" class="form-select">
                                     <option value="">Not Deleted</option>
                                 </select>
@@ -109,7 +109,9 @@
                 {
                     <div class="col-auto d-print-none ms-2">
                         <a asp-page="DownloadSearch" asp-all-route-data="Model.Spec.AsRouteValues()" class="btn btn-sm btn-outline-secondary">
-                            💾 Download search results
+                            <svg class="bi me-1">
+                                <use href="/images/app-icons.svg#app-icon-download"></use>
+                            </svg>&nbsp;Download search results
                         </a>
                     </div>
                 }
