--- a/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
+++ b/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
@@ -20,9 +20,9 @@
                 </a>
                 <a class="navbar-brand nav-link me-2" asp-page="/Index" title="MY_APP_NAME">MY_APP</a>
             }
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-content"
+            <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-content"
                     aria-controls="main-nav-content" aria-haspopup="menu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> <span class="align-middle">Menu</span>
+                <span class="navbar-toggler-icon"></span> <span class="align-middle menu-text">Menu</span>
             </button>
 
             <div class="navbar-collapse collapse d-sm-inline-flex" id="main-nav-content">
@@ -87,7 +87,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li>
-                                    <form class="form-inline py-0 px-2" asp-page="/Account/Logout" method="post">
+                                    <form class="py-0 px-2" asp-page="/Account/Logout" method="post">
                                         <button type="submit" class="btn btn-outline-danger d-block w-100 px-4 py-2">Sign out</button>
                                     </form>
                                 </li>
