Consolidate maintenance item edit warning

--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -32,7 +32,7 @@
     {
         <a asp-page="Edit" class="btn btn-outline-primary me-2">Edit Profile</a>
     }
-    <form class="form-inline d-inline-block" asp-page="Logout" method="post">
+    <form class="d-inline-block" asp-page="Logout" method="post">
         <button type="submit" class="btn btn-danger">Sign out</button>
     </form>
 </div>
