--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -2,104 +2,108 @@
 -------------------------------------------------- */
 
 /* Change the base-hue variable to set all branding colors. */
-:root {
+:root, [data-bs-theme="light"] {
     --base-hue: 0deg;
+    --callout-link: 10, 88, 202;
 }
 
 /* Light mode theme colors */
-.text-bg-brand {
+.navbar {
     background-color: hsl(var(--base-hue), 75%, 91%);
-    color: hsl(210, 11%, 15%);
 }
 
-.text-bg-brand a {
+.navbar a {
     color: hsl(var(--base-hue), 75%, 23%);
 }
 
-.text-bg-brand a:hover,
-.text-bg-brand a:focus {
+.navbar a:hover,
+.navbar a:focus {
     color: hsl(var(--base-hue), 100%, 25%);
 }
 
-.text-bg-brand a:active {
+.navbar a:active {
     color: hsl(var(--base-hue), 100%, 15%);
 }
 
-.text-bg-brand .dropdown-item {
+.navbar .dropdown-item {
     color: hsl(var(--base-hue), 75%, 35%);
 }
 
-.text-bg-brand .dropdown-item:focus,
-.text-bg-brand .dropdown-item:hover {
+.navbar .dropdown-item:focus,
+.navbar .dropdown-item:hover {
     background-color: hsl(var(--base-hue), 100%, 15%);
     color: hsl(var(--base-hue), 75%, 95%);
 }
 
-.text-bg-brand .dropdown-item.active,
-.text-bg-brand .dropdown-item:active {
+.navbar .dropdown-item.active,
+.navbar .dropdown-item:active {
     color: hsl(var(--base-hue), 0%, 0%);
     background-color: hsl(var(--base-hue), 75%, 70%)
 }
 
-.text-bg-brand .nav-link,
-.text-bg-brand .nav-link:hover,
-.text-bg-brand .nav-link:focus,
-.text-bg-brand .navbar-nav .nav-link.active,
-.text-bg-brand .navbar-nav .nav-link.show {
+.navbar .nav-link,
+.navbar .nav-link:hover,
+.navbar .nav-link:focus,
+.navbar .navbar-nav .nav-link.active,
+.navbar .navbar-nav .nav-link.show {
     color: hsl(var(--base-hue), 20%, 20%);
 }
 
-.text-bg-brand .navbar-brand:focus-visible,
-.text-bg-brand .nav-link:focus-visible {
+.navbar .navbar-brand:focus-visible,
+.navbar .nav-link:focus-visible {
     box-shadow: 0 0 0 .25rem hsla(var(--base-hue), 10%, 0%, .57);
 }
 
 /* Dark mode theme colors */
-[data-bs-theme="dark"] .text-bg-brand {
+[data-bs-theme="dark"] {
+    --callout-link: 110, 168, 254;
+}
+
+[data-bs-theme="dark"] .navbar {
     background-color: hsl(var(--base-hue), 75%, 13%);
     color: hsl(var(--base-hue), 0%, 100%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand a {
+[data-bs-theme="dark"] .navbar a {
     color: hsl(var(--base-hue), 100%, 92%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand a:hover,
-[data-bs-theme="dark"] .text-bg-brand a:focus {
+[data-bs-theme="dark"] .navbar a:hover,
+[data-bs-theme="dark"] .navbar a:focus {
     color: hsl(var(--base-hue), 100%, 85%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand a:active {
+[data-bs-theme="dark"] .navbar a:active {
     color: hsl(var(--base-hue), 100%, 95%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand .dropdown-item {
+[data-bs-theme="dark"] .navbar .dropdown-item {
     color: hsl(var(--base-hue), 75%, 90%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand .dropdown-item:focus,
-[data-bs-theme="dark"] .text-bg-brand .dropdown-item:hover {
+[data-bs-theme="dark"] .navbar .dropdown-item:focus,
+[data-bs-theme="dark"] .navbar .dropdown-item:hover {
     color: hsl(var(--base-hue), 75%, 90%);
     background-color: hsl(var(--base-hue), 10%, 19%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand .dropdown-item.active,
-[data-bs-theme="dark"] .text-bg-brand .dropdown-item:active {
+[data-bs-theme="dark"] .navbar .dropdown-item.active,
+[data-bs-theme="dark"] .navbar .dropdown-item:active {
     color: hsl(var(--base-hue), 0%, 100%);
     background-color: hsl(var(--base-hue), 65%, 29%)
 }
 
-[data-bs-theme="dark"] .text-bg-brand .nav-link {
+[data-bs-theme="dark"] .navbar .nav-link {
     color: hsl(var(--base-hue), 0%, 100%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand .navbar-nav .nav-link.active,
-[data-bs-theme="dark"] .text-bg-brand .navbar-nav .nav-link.show {
+[data-bs-theme="dark"] .navbar .navbar-nav .nav-link.active,
+[data-bs-theme="dark"] .navbar .navbar-nav .nav-link.show {
     color: hsl(var(--base-hue), 0%, 100%);
 }
 
-[data-bs-theme="dark"] .text-bg-brand .navbar-brand:focus-visible,
-[data-bs-theme="dark"] .text-bg-brand .nav-link:focus-visible {
+[data-bs-theme="dark"] .navbar .navbar-brand:focus-visible,
+[data-bs-theme="dark"] .navbar .nav-link:focus-visible {
     box-shadow: 0 0 0 .25rem hsla(var(--base-hue), 10%, 100%, .57);
 }
 
@@ -148,7 +152,7 @@ html:not([data-bs-theme="dark"]) .bg-dark-subtle .text-danger-emphasis {
     color: hsl(355, 98%, 24%) !important;
 }
 
-/* Nav bar logo
+/* Navbar logo
 -------------------------------------------------- */
 .img-logo {
     height: 40px;
@@ -223,14 +227,6 @@ footer a[target]::after, a[target].no-external-link::after {
 -------------------------------------------------- */
 /* Adapted from the Bootstrap Docs (https://getbootstrap.com/).
   Licensed under the Creative Commons Attribution 3.0 Unported License. */
-
-:root, [data-bs-theme="light"] {
-    --callout-link: 10, 88, 202;
-}
-
-[data-bs-theme="dark"] {
-    --callout-link: 110, 168, 254;
-}
 
 .callout {
     --bs-link-color-rgb: var(--callout-link);
