--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 <footer class="footer pt-3">
     <div class="bg-body-tertiary py-2 border-bottom d-print-none">
         <div class="container">
-            <a href="#top" class="btn">
+            <a href="#top" class="link-body-emphasis icon-link ms-n1">
                 <svg class="bi">
                     <use href="@Url.Content("~/images/app-icons.svg")#app-icon-arrow-bar-up"></use>
                 </svg> Return to top
