--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -112,12 +112,21 @@
     background-color: var(--bs-secondary-bg-subtle) !important;
 }
 
-/* Accessibility fix for "warning" button on medium/light background
+/* Accessibility fixes for outlined buttons
 -------------------------------------------------------------------- */
 html:not([data-bs-theme="dark"]) .btn-outline-warning {
     --bs-btn-color: #b98b00;
     --bs-btn-border-color: #b98b00;
     --bs-btn-bg: #fff;
+}
+
+.btn-outline-info {
+    --bs-btn-color: var(--bs-body-color);
+}
+
+.btn-outline-primary {
+    --bs-btn-color: rgb( var(--bs-link-color-rgb));
+    --bs-btn-border-color: rgb( var(--bs-link-color-rgb));
 }
 
 /* Adjust font sizing
@@ -187,7 +196,7 @@ html:not([data-bs-theme="dark"]) .bg-dark-subtle .text-danger-emphasis {
     margin-right: 2px;
 }
 
-/* Additional font style utilities
+/* Text utilities
 -------------------------------------------------- */
 .font-weight-medium {
     font-weight: 500 !important;
@@ -205,6 +214,20 @@ html:not([data-bs-theme="dark"]) .bg-dark-subtle .text-danger-emphasis {
     text-decoration: underline !important;
 }
 
+.text-dotted-underline {
+    text-decoration: underline dotted;
+}
+
+/* Spacing utilities
+-------------------------------------------------- */
+.ms-n1 {
+    margin-left: -0.25rem !important;
+}
+
+.mt-n1 {
+    margin-top: -0.25rem !important;
+}
+
 /* External links
 -------------------------------------------------- */
 a[target]::after {
@@ -212,7 +235,7 @@ a[target]::after {
     margin-left: .2em;
 }
 
-/* Suppress external link icon */
+/* Optionally suppress external link icon */
 footer a[target]::after, a[target].no-external-link::after {
     content: none;
 }
