--- a/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
+++ b/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
@@ -9,6 +9,7 @@
     .custom-navbar {
         background-color: #007bff; /* A bright red background */
         color: #fff;              /* White text for contrast */
+        border-radius: 5px;
     }
 
     /* Make sure navbar brand & links stand out on the red background */
