Fix SVG icon spacing

--- a/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
+++ b/src/WebApp/Pages/Shared/Components/MainMenu/Default.cshtml
@@ -50,7 +50,8 @@
                             <a class="nav-link" asp-page="/Staff/WorkEntries/Add" title="Add New Work Entry">
                                 <svg class="bi">
                                     <use href="/images/app-icons.svg#app-icon-plus-lg"></use>
-                                </svg>&nbsp;<span class="d-inline d-sm-none">Add&nbsp;</span>New <span class="d-inline d-sm-none d-lg-inline">Work Entry</span>
+                                </svg> 
+                                <span class="d-inline d-sm-none">Add&nbsp;</span>New <span class="d-inline d-sm-none d-lg-inline">Work Entry</span>
                             </a>
                         </li>
                     }
