--- a/src/WebApp/Pages/Staff/WorkEntries/Index.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Index.cshtml
@@ -111,7 +111,7 @@
                         <a asp-page="DownloadSearch" asp-all-route-data="Model.Spec.AsRouteValues()" class="btn btn-sm btn-outline-secondary">
                             <svg class="bi me-1">
                                 <use href="/images/app-icons.svg#app-icon-download"></use>
-                            </svg>&nbsp;Download search results
+                            </svg> Download search results
                         </a>
                     </div>
                 }
