--- a/src/WebApp/Pages/Support.cshtml
+++ b/src/WebApp/Pages/Support.cshtml
@@ -14,30 +14,27 @@
 
 @if (Model.ActiveUser)
 {
-    <p>For technical support, contact <a href="@AppSettings.SupportSettings.TechnicalSupportSite" target="_blank" rel="noopener">EPD IT support</a>.</p>
+    <p>For technical support, contact
+        <a href="@AppSettings.SupportSettings.TechnicalSupportSite" target="_blank" rel="noopener">EPD IT support</a>.
+    </p>
 }
 
-<div class="callout">
+<div class="callout callout-info">
     <small>
-        The MY_APP_NAME was developed by Georgia EPD-IT.<br/>
-        The Air Web application was developed by Georgia EPD-IT.<br />
+        The MY_APP_NAME was developed by Georgia EPD-IT.<br />
         @if (!string.IsNullOrEmpty(AppSettings.SupportSettings.InformationalVersion))
         {
-            @:Current version: <em>@AppSettings.SupportSettings.InformationalVersion
-                @if (!string.IsNullOrEmpty(AppSettings.SupportSettings.InformationalBuild))
-                {
-                    @:(@AppSettings.SupportSettings.InformationalBuild).
-                }
-
-                @:</em>
+            @:Current version: @AppSettings.SupportSettings.InformationalVersion
+            @if (!string.IsNullOrEmpty(AppSettings.SupportSettings.InformationalBuild))
+            {
+                @:(@AppSettings.SupportSettings.InformationalBuild)
+            }
         }
         <br />
         View the
-        <a href="https://github.com/gaepdit/template-app/blob/main/CHANGELOG.md" target="_blank" rel="noopener"
-           class="text-decoration-hover link-offset-2">Changelog</a>.
+        <a href="https://github.com/gaepdit/template-app/blob/main/CHANGELOG.md" target="_blank" rel="noopener" class="text-decoration-hover link-offset-2">Changelog</a>.
         <br />
         Source code available on
-        <a href="https://github.com/gaepdit/template-app" target="_blank" rel="noopener"
-           class="text-decoration-hover link-offset-2">GitHub</a>.
+        <a href="https://github.com/gaepdit/template-app" target="_blank" rel="noopener" class="text-decoration-hover link-offset-2">GitHub</a>.
     </small>
 </div>
